--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=io.cloudtype.waitlist.dto
+
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://${DB_HOST}:${DB_PORT}/testdb?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=${DB_USERNAME}
